tests/paczka1/fuzzy1/36515660.err
Error in line 5: lb2pIoWjqd AG76 32,3
Error in line 2: A476 A476 19,1
Error in line 8: lb2pIoWjqd A476 33,6
Error in line 13: A476 S701 46,9
Error in line 29: A476 A850 94,1
Error in line 17: p4q A850 55,6
